--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teste JSTDD</title>
+  <title>Teste Spotify Wrapper</title>
 </head>
 <body>
-  <script src="/dist/build.js"></script>
+  <script src="../dist/spotify-wrapper.umd.min.js"></script>
 
 </body>
 </html>
